--- a/package.json
+++ b/package.json
@@ -57,5 +57,8 @@
 		"shx": "^0.3.3",
 		"ts-node": "^10.1.0",
 		"typescript": "^4.3.5"
+	},
+	"dependencies": {
+		"node-abort-controller": "^3.0.0"
 	}
 }
